[gd_scene load_steps=6 format=3 uid="uid://c5nexqx88icl1"]

[ext_resource type="Script" path="res://scenes/enemies/Elf.gd" id="1_utyd3"]
[ext_resource type="Texture2D" uid="uid://bdv068tkmdtp3" path="res://Assets/Elf.png" id="2_xpui5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7xirg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5rhwk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ydotg"]

[node name="Elf" type="CharacterBody2D"]
script = ExtResource("1_utyd3")

[node name="alert" type="Area2D" parent="."]

[node name="radius" type="CollisionShape2D" parent="alert"]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_7xirg")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_5rhwk")

[node name="AttackTimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.8, 0.8)
shape = SubResource("CircleShape2D_ydotg")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_xpui5")

[connection signal="body_entered" from="alert" to="." method="_on_alert_body_entered"]
[connection signal="body_exited" from="alert" to="." method="_on_alert_body_exited"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_hit_box_body_exited"]
